--- a/views/partials/form.pug
+++ b/views/partials/form.pug
@@ -1,6 +1,7 @@
 h1 ADD PRODUCT
 form.d-flex.flex-column.w-25.m-auto(action='/api/products' method='POST')
   input#title.m-2(type='text' name='title' placeholder='title')
-  input#price.m-2(type='text' name='price' placeholder='price')
+  input#price.m-2(type='number' name='price' placeholder='price')
   input#photo.m-2(type='text' name='photo' placeholder='URL Photo')
   input#add.btn.btn-success.m-2(type='button' onclick='addNewProduct()' value='Add')
+  a.btn.btn-primary.m-2(href='/api/cart') Go to cart
