--- a/src/views/welcome.ejs
+++ b/src/views/welcome.ejs
@@ -3,18 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Login</title>
+    <title>Welcome</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
-  <body>
-    <h1 class="text-center mb-5 mt-5">Login</h1>
-    <form action="/login" method="post" class="d-flex flex-column w-25 m-auto">
-      <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label fs-3">Ingrese su nombre</label>
-        <input type="text" class="form-control" id="exampleInputEmail1" name="username"> 
-      </div>
-      <button type="submit" class="btn btn-primary">Ingresar</button>
-    </form>
+  <body class="text-center mt-5">
+    <h1>Bienvenido</h1>
+    <a class="btn btn-danger" href="/signup">Registrate</a>
+    <a class="btn btn-primary" href="/login">Logueate</a>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
