--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -3,19 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SignUp</title>
+    <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
   <body>
-    <h1 class="text-center mb-5 mt-5">SignUp</h1>
-    <form action="/signup" method="post" class="d-flex flex-column w-25 m-auto">
-      <% if (signupMessage) { %>
-        <h2><%= signupMessage %></h2>
+    <h1 class="text-center mb-5 mt-5">Login</h1>
+    <form action="/login" method="post" class="d-flex flex-column w-25 m-auto">
+      <% if (loginMessage) { %>
+        <h2><%= loginMessage %></h2>
       <% } %>
-      <div class="form-floating mb-3">
-        <input type="text" class="form-control" id="floatingInput" name="username" placeholder="Nombre">
-        <label for="floatingInput">Nombre</label>
-      </div>
       <div class="form-floating mb-3">
         <input type="email" class="form-control" id="floatingInput" name="email" placeholder="Email">
         <label for="floatingInput">Email</label>
@@ -24,7 +20,7 @@
         <input type="password" class="form-control" id="floatingPassword" name="password" placeholder="Contraseña">
         <label for="floatingPassword">Contraseña</label>
       </div>
-      <button type="submit" class="btn btn-primary">Registrarse</button>
+      <button type="submit" class="btn btn-primary">Login</button>
     </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
